--- a/src/components/styles/TrendingSlider.css
+++ b/src/components/styles/TrendingSlider.css
@@ -3,14 +3,14 @@
 * {
   margin: 0;
   padding: 0;
-  box-sizing: border-box;
+  /* box-sizing: border-box; */
   scroll-behavior: smooth;
 }
 
-body {
+/* body {
   font-family: "Blinker", sans-serif;
   position: relative;
-}
+} */
 /*
 html {
   font-size: 62.5%;
@@ -18,13 +18,10 @@ html {
 
 /* global */
 .container {
-  max-width: 1200px;
   margin: 0 auto;
   padding: 0 19px;
-  height: 100%;
   display: flex;
-  flex-direction: column;
-  justify-content: center;
+  align-items: center;
 }
 
 .row-item {
@@ -40,10 +37,10 @@ html {
 }
 
 .trending {
-  height: 100vh;
   display: grid;
+  grid-template-columns:10% 80% 10%;
   grid-template-rows: 1fr;
-  grid-template-columns: 1fr 1fr 1fr;
+  height: 100vh;
 }
 
 .item-header img {
@@ -123,14 +120,14 @@ html {
 
 .buttonConfigsLeft {
   display: flex;
-  justify-content: flex-start;
   align-items: center;
+  justify-content: center;
   padding: 1rem;
 }
 .buttonConfigsRight {
   display: flex;
-  justify-content: flex-end;
   align-items: center;
+  justify-content: center;
   padding: 1rem;
 }
 
