--- a/src/components/styles/TrendingSlider.css
+++ b/src/components/styles/TrendingSlider.css
@@ -19,17 +19,20 @@ html {
 /* global */
 .container {
   margin: 0 auto;
-  padding: 0 19px;
+
   display: flex;
   align-items: center;
 }
 
 .row-item {
   border: solid 1px rgb(175, 175, 175);
-  box-shadow: 5px 3px 0px rgb(110, 110, 110);
+  box-shadow: 3px 5px 10px rgb(110, 110, 110);
   cursor: pointer;
   transition: all 0.15s ease-in;
   border-radius: 20px;
+  /* width: 30rem;
+  flex-shrink: 0; */
+  min-width: 27rem;
 }
 
 .row-item:hover {
@@ -48,8 +51,9 @@ html {
 }
 
 .item-description {
-  font-size: 1.7rem;
+  font-size: 1.1rem;
   padding: 1rem;
+  max-width: 30rem;
 }
 
 .trending h3 {
@@ -144,9 +148,28 @@ html {
   display: flex;
   gap: 4px;
   align-items: center;
-  margin-left: 5px;
+
+  box-shadow: 0 1px 4px rgb(110, 110, 110);
+  border-top-right-radius: 20px;
+  border-radius: 20px 20px 0 20px;
+  background-color: #49acaa;
 }
 
 .item-place {
   font-size: 1.2rem;
+  margin-top: 0.3rem;
+}
+.item-coments {
+  padding-bottom: 2rem;
+}
+.item-coment {
+  display: flex;
+  flex: start;
+  margin-left: 1rem;
+  align-items: center;
+  gap: 0.2rem;
+}
+
+#item-coment-last {
+  margin-bottom: 1rem;
 }
