--- a/src/components/styles/Post.modules.css
+++ b/src/components/styles/Post.modules.css
@@ -1,18 +1,93 @@
 .post-card {
     width: 50%;
     border: solid 0.5px black;
-    
     align-items: center;
 }
 
 #userIdent {
-    margin: 10px;
+    margin: 15px;
     display: inline-flex;
-    justify-content: center;
+    justify-content: start;
     align-items: center;
     gap: 5px;
+    width: 50%;
 }
 
 .icon {
-    font-size: 1.5rem;
+    font-size: 1.2rem;
+}
+.iconUser {
+    font-size: 2rem;
+}
+
+.header {
+    display: inline-flex;
+    align-items: center;
+    width: 100%;
+}
+
+#namePage{
+    width: 50%;
+    display: flex;
+    justify-content: end;
+    margin-right: 15px;
+}
+
+#postImage {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+#img {
+    margin: 5px 0 10px 0;
+    border-radius: 10px;
+    width: 95%;
+}
+
+#postText {
+    margin: 5px 10px 5px 10px;
+    font-size: 1.2rem;
+    word-break: break-word;
+}
+
+#interaction{
+    width: 50%;
+    border: solid 0.5px black;
+    align-items: center;
+    display: flex;
+}
+
+#click {
+    display: inline-flex;
+    justify-content: start;
+    align-items: center;
+    width: 50%;
+}
+
+
+#share {
+    margin-right: 10px;
+    background-color: #49ACAA;
+    border-radius: 10px;
+
+}
+
+.share2{
+    width: 50%;
+    height: 100%;
+    display: inline-flex;
+    justify-content: end;
+    align-items: center;
+}
+
+.inte {
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    margin: 10px;
+    padding: 5px;
+    background-color: #49ACAA;
+    border-radius: 10px;
+
 }
