--- a/src/components/styles/TrendingSlider.css
+++ b/src/components/styles/TrendingSlider.css
@@ -18,10 +18,7 @@ html {
 
 /* global */
 .container {
-  margin: 0 auto;
-
-  display: flex;
-  align-items: center;
+  margin: 15% 0 10% 0;
 }
 
 .row-item {
@@ -43,7 +40,6 @@ html {
   display: grid;
   grid-template-columns: 10% 80% 10%;
   grid-template-rows: 1fr;
-  height: 100vh;
 }
 
 .item-header img {
@@ -128,6 +124,7 @@ html {
   justify-content: center;
   padding: 1rem;
 }
+
 .buttonConfigsRight {
   display: flex;
   align-items: center;
